// Package: net.ikigai.cds
// Module: cabinet.services
//
// Author: Narcis M. Pap
// Copyright (c) 2018 Ikigai Cloud. All rights reserved.

syntax = "proto3";
package cds.cabinet.v1;

enum MutationStatus{
    SUCCESS = 0;

    GENERIC_FAILURE = 10;
    CONNECTION_FAILURE = 11;
    PROCESSING_FAILURE = 12;
    READ_CHECK_FAILURE = 13;
    MUTATION_FAILURE = 14;
}

enum ListRange{
    UNDEFINED = 0;
    ALL = 1;
    EXACT_RANGE = 2;
    START_WITH = 3;
}

message ListOptions{
    uint32 page_size = 3;
    ListRange mode = 4;

    string key_start = 10;
    string key_end = 11;
    bool reverse = 12;
}

message MutationResponse{
    MutationStatus status = 1;
}


